added .jar file

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,9 +1,2 @@
-/500-worst-passwords.txt
-/Hello.class
-/PasswordCracker.class
-/Test.class
-/passwd
-/shadow
-/Copy of 500-worst-passwords.txt
-/Copy of passwd
-/Copy of shadow
+/pwdcrckr.class
+/pwdcrckr.jar
